# remote-barista

./: README.md
contracts/: robot_contracts.proto  user_contracts.proto
docs/: system_architecture.drawio
lambdas/robot_control/: pyproject.toml
lambdas/user_service/: pyproject.toml
scripts/: documentation_release.sh
